Creatures now defined in tablist
-this behaviour is the same but now stored in a tablist instead of hard-coded